<resources>
    <string name="app_name">Exercise1</string>
    <string name="questions_list">Questions List:</string>
    <string name="choose_multi">Multi-Choice Question</string>
    <string name="choose_fill">Fill-in-the-Blank Question</string>


    <!--    timer-->
    <string name="timerA">TimerA</string>
    <string name="timerB">TimerB</string>
    <string name="timerSwitch">Hide Timer</string>
    <string name="setTimerText">Set Time in seconds</string>
    <string name="setTimerButton">Set Timer</string>
    <string name="set_timer_description">Set Time Limit</string>


    <!--multi_choice_question1    -->
    <string name="multi_choice_question1">The primitive data types in Java include()</string>
    <string-array name="options">
        <item>String</item>
        <item>int</item>
        <item>ArrayList</item>
        <item>LinkedList</item>
    </string-array>
    <!--multi_choice_question2    -->
    <string name="multi_choice_question2"> In Java, what is the purpose of the final keyword?</string>
    <string name="Option2_1">A. Used to define immutable constants.</string>
    <string name="Option2_2">B. Used to ensure a class cannot be inherited.</string>
    <string name="Option2_3">C. Used to ensure a method is not overridden by subclasses.</string>
    <string name="Option2_4">D. Used to improve the efficiency of program execution.</string>
    <string name="Option2_5">E. Used for initializing class member variables.</string>
    <string name="Option2_6">F. Used to define static methods.</string>
    <string name="Option2_7">G. Used for implementing methods in interfaces.</string>
    <string name="Option2_8">H. Used for creating anonymous classes.</string>

    <!--    fill_in_the_blank_question1-->
    <string name="fill_in_the_blank_question1">In Java, the keyword ________ is used to define a variable that can store decimal numbers.</string>
    <string name="answer1">Please type in the answer</string>
    <string name="button">Submit</string>

    <string name="chooser">Get Result Using...</string>
    <string name="result_activity_label">Result</string>

</resources>