<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FillinTheBlankQuestionActivity">
    <!--    tools:context=".MultipleChoiceQuestionActivity">-->

        <!--    tools:context=".MultipleChoiceQuestionActivity">-->
        <!--    Timers-->
        <TextView
            android:id="@+id/timerA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|end"
            android:padding="8dp"
            android:textSize="16sp"
            android:layout_marginTop="24dp"
            android:text="@string/timerA" />

        <TextView
            android:id="@+id/timerB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|end"
            android:padding="8dp"
            android:textSize="16sp"
            android:text="@string/timerB" />

<!--        <EditText-->
<!--            android:inputType="text"-->
<!--            android:id="@+id/setTimerTextView"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:padding="16dp"-->
<!--            android:textSize="16sp"-->
<!--            android:layout_gravity="top|end"-->
<!--            android:hint="@string/setTimerText" />-->

<!--        <ImageButton-->
<!--            android:id="@+id/setTimerButton"-->
<!--            android:layout_width="80dp"-->
<!--            android:layout_height="80dp"-->
<!--            android:scaleType="centerInside"-->
<!--            android:src="@drawable/alarm_clock_image"-->
<!--            android:contentDescription="@string/set_timer_description"-->
<!--            android:layout_gravity="top|end"-->
<!--            android:onClick="onSetTimeClicked"/>-->


<!--        <Switch-->
<!--            android:id="@+id/timerSwitch"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="top|end"-->
<!--            android:padding="16dp"-->
<!--            android:textSize="16sp"-->
<!--            android:text="@string/timerSwitch"-->
<!--            android:onClick="onSwitchClicked"/>-->


        <!--fill-in-the-blank question-->

        <TextView
            android:id="@+id/FillinTheBlankQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textSize="20sp"
            android:text="@string/fill_in_the_blank_question1" />

        <EditText
            android:id="@+id/Answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textSize="16sp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/answer1" />


        <!--submit answer-->
        <Button
            android:id="@+id/SubmitMulti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button"
            android:padding="16dp"
            android:onClick="submitFill"
            android:layout_gravity="bottom|end"/>

        <ImageButton
            android:id="@+id/SubmitMultiImage"
            android:layout_width="76dp"
            android:layout_height="48dp"
            android:src="@drawable/alarm_clock_image"
            android:scaleType="fitCenter"
            android:onClick="submitMulti"
            android:layout_gravity="bottom|end"
            android:visibility="gone"/>

    </LinearLayout>
</ScrollView>